# flock2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: docker_image.yml
cfg/: camera_info.txt
docker/: Dockerfile
include/: action_mgr.hpp  context_macros.hpp  drone.hpp  drone_base.hpp  drone_pose.hpp  eigen_util.hpp  filter_node.hpp  flight_controller_basic.hpp  flight_controller_interface.hpp  flight_controller_simple.hpp  flock_base.hpp  global_planner.hpp  joystick.hpp  kf.hpp  local_planner.hpp  pid.hpp  planner_node.hpp  simple_planner.hpp
launch/: default.rviz  flock_launch.py  gazebo_launch.py  launch_one.py  launch_two.py  one.rviz  simple_launch.py  teleop_launch.py  two.rviz  usb_camera_launch.py
msg/: Arena.msg  FlightData.msg  Flip.msg  Waypoints.msg
scripts/: environment_test.py
src/: action_mgr.cpp  action_mgr.py  detect_aruco.py  detect_markers.cpp  drone.cpp  drone_base.cpp  eigen_util.cpp  filter.py  filter_node.cpp  flight_controller_basic.cpp  flight_controller_simple.cpp  flock_base.cpp  flock_base.py  flock_driver.py  flock_simple_path.py  get_camera_info.cpp  global_planner.cpp  kf.cpp  kf.py  latch_pub.py  latch_sub.py  latching.py  local_planner.cpp  perf_test.py  planner_node.cpp  simple.py  simple_planner.cpp  smooth_path_4poly_2min.py  tf2_test.py  usb_camera.cpp  usb_camera.py  util.py  video_node.py
srv/: GetGlobalPlan.srv  GetLocalPlan.srv
urdf/: drone1.urdf  drone2.urdf  tello.urdf
